# ystar

./: .clang-format  .gitattributes  CMakeLists.txt  Makefile  README  README.md  amalgamate.py  amalgamate_template.h  analyse.py
examples/: CMakeLists.txt  Makefile  main.c
examples/include/: ystar.h
include/: ystar.h
src/: main.c  ystar.c
